--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://openapi.foodsafetykorea.go.kr"
+  "proxy": "http://openapi.foodsafetykorea.go.kr",
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
+  }
 }
